# cleaning-management-system

./: .gitignore  lambda_function.py
.devcontainer/: devcontainer.json
alexa-skill/: README.md  deploy.py  pyproject.toml
alexa-skill/docs/: Log.md
alexa-skill/src/: __init__.py  alexa_handlers.py  google_sheets_manager.py
alexa-skill/test/: test-payload.json  test_lambda_manually.py  test_sheets_creation.py
config/: default_cleaning_settings.yaml
src/: sheet_constants.py
visualizer/: .gitignore  DEPLOY.md  README.md  main.py  pyproject.toml  requirements.txt
visualizer/cleaning_visualizer/: __init__.py  app.py  config.py  data_manager.py  mobile_fixes.py  pomodoro.py  visualization.py
